Fix tax code "N-T" wrapping on banking. (#2657)

--- a/src/modules/banking/components/BankTransactionTable.module.css
+++ b/src/modules/banking/components/BankTransactionTable.module.css
@@ -58,8 +58,8 @@
 }
 
 .allocationAndTaxCode {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
 
 .description {
